# ai-travel-expense-copilot

./: README.md
ai-travel-expense-copilot/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai-travel-expense-copilot/docs/: API_EXAMPLES.md  ARCHITECTURE.md
ai-travel-expense-copilot/infra/: aws_lambda_architecture.md  clickhouse_schema.sql
ai-travel-expense-copilot/sample_data/events/: claims_events.jsonl
ai-travel-expense-copilot/sample_data/policies/: domestic_travel_policy.md
ai-travel-expense-copilot/sample_data/receipts/: hotel_mumbai_receipt.txt
ai-travel-expense-copilot/src/expense_ai_copilot/: __init__.py  main.py
ai-travel-expense-copilot/src/expense_ai_copilot/agents/: claim_review_graph.py
ai-travel-expense-copilot/src/expense_ai_copilot/api/: routes.py  schemas.py
ai-travel-expense-copilot/src/expense_ai_copilot/core/: settings.py
ai-travel-expense-copilot/src/expense_ai_copilot/services/: claim_rules.py  policy_retriever.py  receipt_parser.py
ai-travel-expense-copilot/tests/: test_claim_review_graph.py  test_policy_retriever.py
